--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -47,6 +47,7 @@ logging:
     com.example: DEBUG # Custom package log level
     org.hibernate.type.descriptor.sql: TRACE # Hibernate SQL log level
     dev.langchain4j: DEBUG # langchain4j-related log level
+    dev.chatbot: DEBUG
 
 # chatbot model config
 chatbot:
