--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,10 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <springdoc.version>2.8.8</springdoc.version>
         <langchain4j.version>1.0.0-beta4</langchain4j.version>
+        <spotless-maven-plugin.version>2.44.4</spotless-maven-plugin.version>
+        <maven-compiler-plugin.version>3.14.0</maven-compiler-plugin.version>
     </properties>
 
     <dependencies>
@@ -110,7 +113,7 @@
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <!-- check springboot version and springdoc version -->
             <!--https://springdoc.org/#what-is-the-compatibility-matrix-of-springdoc-openapi-with-spring-boot-->
-            <version>2.8.8</version>
+            <version>${springdoc.version}</version>
         </dependency>
 
         <!-- LangChain4j Dependencies Start-->
@@ -143,11 +146,40 @@
     <!--Build Settings -->
     <build>
         <plugins>
+            <!-- Code Format Plugin, used to format code -->
+            <plugin>
+                <groupId>com.diffplug.spotless</groupId>
+                <artifactId>spotless-maven-plugin</artifactId>
+                <version>${spotless-maven-plugin.version}</version>
+                <configuration>
+                    <java>
+                        <!-- These are the defaults, you can override if you want -->
+                        <includes>
+                            <include>src/main/java/**/*.java</include>
+                            <include>src/test/java/**/*.java</include>
+                        </includes>
+                        <!-- Cleanthat will refactor your code, but it may break your style: apply it before your formatter -->
+                        <cleanthat /> <!-- has its own section below -->
+                        <palantirJavaFormat>
+                            <version>2.39.0</version> <!-- optional -->
+                            <style>PALANTIR</style> <!-- or AOSP/GOOGLE (optional) -->
+                            <formatJavadoc>false</formatJavadoc> <!-- defaults to false (optional, requires at least Palantir 2.39.0) -->
+                        </palantirJavaFormat>
+                        <removeUnusedImports /> <!-- self-explanatory -->
+                        <formatAnnotations />  <!-- fixes formatting of type annotations, see below -->
+                        <importOrder>
+                            <wildcardsLast>true</wildcardsLast>
+                            <order>java|javax,org,com,,dev.chatbot,\#,\#dev.chatbot,</order>
+                            <semanticSort>true</semanticSort>
+                        </importOrder>
+                    </java>
+                </configuration>
+            </plugin>
             <!--Maven Compiler Plugin, used to set JDK version -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.14.0</version>
+                <version>${maven-compiler-plugin.version}</version>
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
