--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,12 @@
             <version>${langchain4j.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>dev.langchain4j</groupId>
+            <artifactId>langchain4j-web-search-engine-tavily</artifactId>
+            <version>${langchain4j.version}</version>
+        </dependency>
+
         <!-- for Flux<String> support -->
         <dependency>
             <groupId>dev.langchain4j</groupId>
