--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -63,3 +63,6 @@ chatbot:
     temperature: 0.8
     top-p: 0.9
     max-tokens: 512
+
+tavily:
+  api-key: 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
