--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -51,9 +51,9 @@ logging:
 
 # chatbot model config
 chatbot:
-  datasets:
-    base-dir: ${DATASETS_BASE:/data} # Dataset base directory
-    sync-policy: ${DATASETS_SYNC_POLICY:NEVER} # Synchronize datasets
+  # datasets:
+  #   base-dir: ${DATASETS_BASE:/data} # Dataset base directory
+  #   sync-policy: ${DATASETS_SYNC_POLICY:NEVER} # Synchronize datasets
   embedding:
     base-url: ${EMBEDDING_BASE_URL:https://api.openai.com} # Base URL for embedding service
   llm:
