--- a/web/package.json
+++ b/web/package.json
@@ -13,25 +13,25 @@
   },
   "dependencies": {
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
-    "@tailwindcss/vite": "^4.1.12",
-    "ahooks": "^3.9.5",
-    "antd": "^5.27.0",
+    "@tailwindcss/vite": "^4.1.17",
+    "ahooks": "^3.9.6",
+    "antd": "^5.29.1",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.542.0",
-    "micromark-extension-llm-math": "^3.1.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "lucide-react": "^0.554.0",
+    "micromark-extension-llm-math": "^3.1.1-20250610",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-markdown": "^10.1.0",
-    "react-router": "^7.8.2",
-    "react-syntax-highlighter": "^15.6.6",
+    "react-router": "^7.9.6",
+    "react-syntax-highlighter": "^16.1.0",
     "react-window": "^1.8.11",
-    "read-excel-file": "^5.8.8",
+    "read-excel-file": "^6.0.1",
     "rehype-katex": "^7.0.1",
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
-    "tailwindcss": "^4.1.12",
-    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz",
+    "tailwindcss": "^4.1.17",
+    "xlsx": "^0.18.5",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
@@ -39,28 +39,29 @@
     "@testing-library/react": "^16.3.0",
     "@types/jest": "^30.0.0",
     "@types/lodash": "^4.17.20",
-    "@types/node": "^24.3.1",
-    "@types/react": "^19.1.12",
-    "@types/react-dom": "^19.1.9",
+    "@types/node": "^24.10.1",
+    "@types/react": "^19.2.6",
+    "@types/react-dom": "^19.2.3",
     "@types/react-syntax-highlighter": "^15.5.13",
-    "@types/react-window": "^1.8.7",
-    "@typescript-eslint/eslint-plugin": "^8.43.0",
-    "@typescript-eslint/parser": "^8.40.0",
-    "@vitejs/plugin-react": "^5.0.2",
-    "@vitejs/plugin-react-swc": "^4.0.1",
-    "eslint": "^9.35.0",
+    "@types/react-window": "^1.8.8",
+    "@typescript-eslint/eslint-plugin": "^8.47.0",
+    "@typescript-eslint/parser": "^8.47.0",
+    "@vitejs/plugin-react": "^5.1.1",
+    "@vitejs/plugin-react-swc": "^4.2.2",
+    "baseline-browser-mapping": "^2.8.29",
+    "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.3.0",
-    "jest": "^30.1.3",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.4.24",
+    "globals": "^16.5.0",
+    "jest": "^30.2.0",
     "prettier": "^3.6.2",
-    "ts-jest": "^29.4.1",
-    "typescript": "^5.9.2",
-    "vite": "^7.1.4",
-    "vite-plugin-compression2": "^2.2.1",
+    "ts-jest": "^29.4.5",
+    "typescript": "^5.9.3",
+    "vite": "^7.2.2",
+    "vite-plugin-compression2": "^2.3.1",
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-svgr": "^4.5.0"
   },
